# kulde-app

./: README.md  wrangler.jsonc
client/: .gitignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  wrangler.jsonc
client/src/: App.tsx  constants.ts  i18n.js  index.css  main.tsx  store.ts
client/src/common/: ActionContext.tsx  Providers.tsx  constants.ts  types.ts
client/src/components/: Layout.tsx  Navigation.tsx
client/src/components/canvas/: Model.tsx
client/src/components/diagram/: Actionbar.tsx  Anchor.tsx  Border.tsx  Connector.tsx  (+7 more)
client/src/hooks/: useAction.ts  useAddToStore.ts  useCustomFont.ts  useDeleteFromStore.ts
client/src/lib/: utils.ts
client/src/models/: room.ts
client/src/pages/: Components.tsx  Diagram.tsx  Error.tsx  Home.tsx  Simulator.tsx
client/src/shared/: Layout.tsx  Navigation.tsx
client/src/utils/: helpers.ts
server/: .gitignore  README.md  core.py  main.py  pyproject.toml  run.sh  server.csproj  server.http
server/Properties/: launchSettings.json
server/app/: app_state.py  config.py  dependencies.py  logger.config.yaml  logger.py  logging_config.json  main.py
server/app/api/: endpoint.py
server/app/api/websocket/: connection_manager.py
server/app/components/: compressor.py  condensator.py  evaporator.py  txv.py
server/app/core/: component.py  controller.py  room.py  system.py
server/app/models/: api.py  simulator.py
server/app/services/: simulation_service.py
server/app/simulation/: controller.py  engine.py  refrigerant.py  room.py
server/app/simulation/components/: compressor.py
server/app/simulator/components/: compressor.py  condensator.py  evaporator.py  txv.py
server/app/simulator/core/: component.py  controller.py  refrigerant.py  room.py  system.py
server/app/utils/: enums.py  logger.py
(+111 files in other folders)
